landing: #fix sidebar not showing

--- a/src/css/defaults.css
+++ b/src/css/defaults.css
@@ -7,6 +7,7 @@ html,
 body {
     border: 2px solid #000;
     background-color: #eee;
-    height: 100vh;
-    width: 100vw;
+    max-height: 100vh;
+    max-width: 100%;
+    overflow: hidden;
 }
