--- a/src/css/landing.css
+++ b/src/css/landing.css
@@ -6,6 +6,9 @@
     align-content: center;
     justify-items: center;
     align-items: center;
+    grid-template-areas: "nav-handler genre sidebar-handler" "title title title" "prog prog prog" "controls controls controls" "player player player";
+    grid-template-columns: 3fr 4fr 3fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .nav-handler {
@@ -45,5 +48,10 @@
 
 .player {
     grid-area: player;
+    border: 1px solid black;
+}
+
+.footer {
+    grid-area: footer;
     border: 1px solid black;
 }
